--- a/css/index.css
+++ b/css/index.css
@@ -499,13 +499,13 @@ body {
 }
  */
 .carousel-img {
-    width: 250px;
+    width: 300px;
     height: auto;
     max-height: 200px;
     flex-shrink: 0;
     object-fit: contain;
-    padding: 0.5rem;
-/*     background-color: #000; /* opcional: destaca imagem menor */
+    padding: 1rem;
+    background-color: #000; /* opcional: destaca imagem menor
     border-right: 8px solid var(--bg-color); */
 /*     margin-right: 1rem; */
 }
