--- a/css/index.css
+++ b/css/index.css
@@ -125,6 +125,11 @@ body {
 
 #main-nav.scrolled {
   background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
   padding: 1rem 0;
   box-shadow: 0 2px 10px rgba(11, 11, 11, 0.2);
 }
@@ -274,9 +279,9 @@ body {
 }
 
 .testimonial-card .profile-image {
-  width: 80px;
-  height: 80px;
-  border: 3px solid var(--accent-color);
+  width: 120px;
+  height: 120px;
+  border: 0px solid var(--accent-color);
   flex-shrink: 0;
   /* Reseta a sombra herdada da classe .profile-image genérica */
   box-shadow: none;
@@ -476,27 +481,6 @@ body {
     padding: 1rem;
   }
 }
-.carousel {
-    overflow: hidden;
-    position: relative;
-    margin-bottom: 3rem;
-    border-radius: 12px;
-    box-shadow: 1 4px 16px rgba(0, 0, 0, 0.5);
-}
-
-.carousel-track {
-    display: flex;
-    animation: scroll-carousel 30s linear infinite;
-    width: calc(300px * 12);
-}
-
-.carousel-img {
-    width: 300px;
-    flex-shrink: 0;
-    height: 200px;
-    object-fit: cover;
-    border-right: 4px solid var(--bg-color);
-} 
 
 @keyframes scroll-carousel {
     0% {
@@ -529,4 +513,36 @@ body {
 .faq-item p {
     color: var(--text-secondary);
     line-height: 1.6;
+}
+
+.carousel {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    -webkit-mask-image: linear-gradient(to right, transparent, #000);
+    mask-image: linear-gradient(to right, transparent, #000);
+}
+.carousel-track {
+    display: flex;
+}
+.whatsapp-float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366; /* Cor oficial do WhatsApp */
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.3s ease;
+    text-decoration: none; /* Remove underline from link */
+}
+.whatsapp-float:hover {
+    transform: scale(1.1);            -webkit-mask-image: linear-gradient(to right, transparent, #000);
 }
