--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 :root {
-  --bg-color: #000000;
+  --bg-color: black;
   /* slate-900 */
   --card-bg: #1e293b;
   /* slate-800 */
@@ -620,6 +620,7 @@ body {
 .apoio button:hover {
     background-color: #06b6d4;
     }
+
 
 
 
