--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: "Segoe UI", sans-serif;
-    background-color: #0f172a;
+    background-color: black;
     margin: 0;
     padding: 20px;
     }
