--- a/css/duvidas.css
+++ b/css/duvidas.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #0f172a;
+  background-color: black;
   color: #f1f5f9;
   margin: 0;
   padding: 2rem;
