--- a/css/simulador.css
+++ b/css/simulador.css
@@ -1,5 +1,5 @@
 :root {
-    --bg-color: #0f172a;      /* Fundo principal */
+    --bg-color: black;      /* Fundo principal */
     --card-bg: #1e293b;       /* Fundo dos cards */
     --border-color: #334155;  /* Bordas */
     --text-primary: #f1f5f9;  /* Texto principal */
